restyle page-edit button to fixed position when text scrolled - if an edit is needed, now there is no need to scroll to top of file - move the div to the main tile - restyle to make fairly unobtrusive - z-index so it floats above text. - opacity 50% so when overlapping, text is visible

--- a/Website/plugins/page-styling/scss/_themes-template-common.scss
+++ b/Website/plugins/page-styling/scss/_themes-template-common.scss
@@ -194,18 +194,23 @@ strong {
   color: $heading;
 }
 
-.raku.page-header .page-edit {
-  color: $grey-dark;
+.page-edit {
+    color: $grey-dark;
+    left: 95vw;
+    position: fixed;
+    top: 15vh;
+    z-index: 10;
+    opacity: 50%;
 
-  .page-edit-button {
-    background: $scheme-main-ter;
-    color: $text-dark;
-    border-color: $border;
+    .page-edit-button {
+        background: $scheme-main;
+        color: $heading;
+        border-color: $border;
 
-    &:hover {
-      background: $scheme-main-bis;
+        &:hover {
+            background: $scheme-main-ter;
+        }
     }
-  }
 }
 
 /* Raku search page */
